--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,12 +2,15 @@
 name: Deploy static content to Pages
 
 env:
-  VITE_TEST_VARIABLE: "Hello World" 
+  VITE_TEST_VARIABLE: "Hello World"
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ['main']
+    branches: [ 'main' ]
 
+  # Runs on pull requests targeting the default branch
+  pull_request:
+    branches: [ 'main' ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
